--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "jest": "^25.1.0",
     "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "7.0.1",
     "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.11"
   },
